# acolite

./: .gitignore  .gitignore_rust  Cargo.toml  EXTENDED_SENSOR_ROADMAP.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  README.md  README_RUST.md  REGRESSION_TESTING_ROADMAP.md  RUST_PORT_ROADMAP.md  acolite.spec  environment.yml  launch_acolite.py  prof_test.py  setup.cfg  test.py  wf_test.py
.github/: copilot-instructions.md
.github/instructions/: python-conventions.instructions.md  rust-conventions.instructions.md
acolite/: __init__.py
acolite/ac/: __init__.py  gas_transmittance.py  gaslut_interp.py  irradiance.py  ko3_read.py  o2lut_interp.py  optimise_aot_homogeneous.py  optimise_read.py  pressure_elevation.py  rayleigh.py  refri.py  tto3_interp.py  wvlut_interp.py
acolite/acolite/: __init__.py  acolite_flags.py  acolite_gem.py  acolite_gui.py  acolite_l1r.py  acolite_l2r.py  acolite_l2w.py  acolite_luts.py  acolite_map.py  acolite_pans.py  acolite_run.py  identify_bundle.py  inputfile_test.py  parameter_cf_attributes.py  parameter_discretisation.py  parameter_scaling.py
acolite/adjacency/: __init__.py
acolite/aerlut/: __init__.py  ilut.py  import_interface_lut.py  import_lut.py  import_lut_sensor.py  import_luts.py  import_rsky_lut.py  import_rsky_luts.py  merged_lut.py  reverse_lut.py
acolite/amazonia/: bundle_test.py  l1_convert.py  metadata.py
acolite/api/: __init__.py  get_scene.py
acolite/avhrr/: __init__.py  bundle_test.py  l1_convert.py  metadata.py  read_fill.py
acolite/cdse/: download.py  query.py
acolite/chris/: __init__.py  interband_calibration.py  l1_convert.py  noise_reduction.py  vdata.py  view_geometry.py
acolite/convert/: __init__.py  c2rcc.py  ocsmart.py  polymer.py
acolite/custom/: __init__.py  convert_gaac.py
acolite/deimos/: bundle_test.py  l1_convert.py  metadata.py
acolite/dem/: __init__.py  copernicus_dem_download.py  copernicus_dem_filelist.py  copernicus_dem_find.py  copernicus_dem_lonlat.py  copernicus_dem_rpc.py  dem_lonlat.py  emodnet_bathymetry.py  hgt_download.py  hgt_find.py  hgt_geolocation.py  hgt_lonlat.py  hgt_read.py  hillshade_nc.py  srtm15plus.py  srtm15plus_lonlat.py  srtm15plus_reproject.py
acolite/desis/: __init__.py  bundle_test.py  hdr.py  l1_convert.py  metadata.py  metadata_QV.py
acolite/dimap/: __init__.py  bundle_test.py  l1_convert.py  metadata.py
acolite/earthcare/: bundle_test.py  l1_convert.py
acolite/earthexplorer/: __init__.py  auth.py  download.py  query.py
acolite/ecostress/: __init__.py  attributes.py  bt_lut.py  l1_convert.py
acolite/emit/: __init__.py  l1_convert.py
acolite/enmap/: __init__.py  bundle_test.py  l1_convert.py  metadata_parse.py  rpcs.py
benches/: performance.rs
config/: config.toml  config.txt  credentials.toml  credentials.txt  defaults.txt  gee_settings.txt  parameter_cf_attributes.json  parameter_discretisation.txt  parameter_labels.txt  parameter_labels_user.txt
examples/: download_testset.rs  full_workflow.rs  pace_optimized.rs  pace_real_data.rs  pace_to_geozarr.rs  process_aws_landsat.rs  process_landsat.rs  process_landsat_scene.rs  process_pace.rs  process_pace_ac.rs  process_pace_fullres.rs  process_sentinel2.rs  process_sentinel2_ac.rs  process_sentinel3.rs  stac_download.rs
src/: download.rs  earthdata.rs  error.rs  lib.rs  main.rs  parallel.rs  pipeline.rs  resample.rs  simd.rs  stac.rs
tests/: all_sensors_proptest.rs  integration_tests.rs  landsat_e2e.rs  pace_e2e.rs  sentinel2_e2e.rs  sentinel3_e2e.rs  sentinel3_proptest.rs
tools/: agent_harness.py  kiro_context.py
(+2706 files in other folders)
