[package]
name = "acolite-rs"
version = "0.1.0"
edition = "2021"
authors = ["ACOLITE Contributors"]
description = "High-performance atmospheric correction for aquatic remote sensing"
license = "GPL-3.0"
repository = "https://github.com/acolite/acolite"

[[bin]]
name = "acolite-rs"
path = "src/main.rs"

[dependencies]
# Array processing
ndarray = "0.15"
rayon = "1.8"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "performance"
harness = false
